# FlatFoxEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  conanfile.txt  macbuild.sh  main.cpp
MacWindow.dSYM/Contents/: Info.plist
assets/Shaders/: .BasicLighting.shader.swp  BasicRayTrace.shader  FrameBuffer.shader  MultiImg.shader
src/: Camera.cpp  Camera.hpp  FlatFoxEngine.hpp  FlatFoxMath.hpp  FlatFoxRenderWarnings.cpp  FlatFoxRenderWarnings.hpp  FlatFoxWindow.cpp  FlatFoxWindow.hpp  FrameBufferObject.cpp  FrameBufferObject.hpp  IndexBuffer.hpp  Renderer.hpp  Shader.cpp  Shader.hpp  SimpleObject.cpp  SimpleObject.hpp  SimplePhysics.cpp  SimplePhysics.hpp  SimplePhysicsObjects.hpp  SimpleWorld.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp
src/Seens/: BasicMovement.cpp  BasicMovement.hpp
